Fix text track cue font size and colors https://bugs.webkit.org/show_bug.cgi?id=75051

Reviewed by Darin Adler.

Source/WebCore:

No new tests, updated media/track/track-cue-rendering.html for the changes.

* css/mediaControls.css:
(video::-webkit-media-text-track-container): Match WebVTT spec.
(video::-webkit-media-text-track-display): Ditto.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateSizes): Change font size from  4% of the
    video height to 5% as per the spec. Don't enforce a minimum size.

LayoutTests:

* media/track/track-cue-rendering-expected.txt:
* media/track/track-cue-rendering.html:


Canonical link: https://commits.webkit.org/91798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103486 268f45cc-cd09-0410-ab3c-d52691b4dbfc